Add support for serving image logos from disk
As OCI has no standard way of attaching logos to images, let the user
configure a directory from which image logos are served.

For now, logos identified from Docker Hub are still only fetched from
the browser as there are security concerns with having the backend fetch
these on request (i.e. proxying them). The API will redirect to such
external URLs, allowing for overrides.
